@@ -217,7 +217,7 @@ int ibis::egale::write32(int fdes) const {
     }
 
     offset64.clear();
-    offset32.resize(nobs+1);
+    offset32.resize(nbits+1);
     offset32[0] = 8*((7+start+3*sizeof(uint32_t))/8);
     ierr = UnixSeek(fdes, offset32[0], SEEK_SET);
     if (ierr != offset32[0]) {
@@ -317,7 +317,7 @@ int ibis::egale::write64(int fdes) const {
     }
 
     offset32.clear();
-    offset64.resize(nobs+1);
+    offset64.resize(nbits+1);
     offset64[0] = 8*((7+start+3*sizeof(uint32_t))/8);
     ierr = UnixSeek(fdes, offset64[0], SEEK_SET);
     if (ierr != offset64[0]) {
